--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "googleapis": "^57.0.0",
     "gridsome": "^0.7.22",
     "gridsome-plugin-flexsearch": "^1.0.5",
-    "gridsome-plugin-pwa": "0.0.18",
     "gridsome-plugin-robots-txt": "^1.0.2",
     "gridsome-plugin-transfer-file": "^0.1.0",
-    "plyr": "^3.6.2",
+    "plyr": "^3.6.3",
     "tailwindcss": "^1.9.6",
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.2",
     "typeface-inter": "^3.15.0",
     "typeface-merriweather": "^1.1.13",
-    "vue-gtm": "^2.3.4",
+    "vue-gtm": "^3.1.0-vue2",
     "vue-plyr": "^6.0.4",
     "vue-svg-loader": "^0.15.0",
     "vue2-touch-events": "^2.3.2"
