--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,7 @@
     },
     {
       "src": "/manifest.json",
+      "headers": { "Cache-Control": "max-age=0, must-revalidate" },
       "continue": true
     },
     {
