--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,12 @@
       "dest": "/topics"
     },
     {
+      "src": "/assets/fonts/(.*)",
+      "headers": {
+        "Cache-Control": "max-age=31500000, must-revalidate"
+      }
+    },
+    {
       "src": "/(.*)",
       "headers": { "Cache-Control": "max-age=604800, must-revalidate" },
       "dest": "/$1"
