--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
-    "style-resources-loader": "^1.3.3"
+    "style-resources-loader": "^1.3.3",
+    "svg-inline-loader": "^0.8.2"
   }
 }
