--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "gridsome develop",
     "build": "gridsome build",
     "explore": "gridsome explore",
-    "postinstall": "cp -R module_hotfix/ node_modules/"
+    "postinstall": "rsync -av module_hotfix/ node_modules/"
   },
   "dependencies": {
     "@allanchain/gridsome-plugin-pwa": "^0.3.0",
