--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "gridsome develop",
     "build": "gridsome build",
     "explore": "gridsome explore",
-    "postinstall": "cp -rfv module_hotfix/* node_modules/"
+    "postinstall": "false && cp -rfv module_hotfix/* node_modules/ ; true"
   },
   "dependencies": {
     "@allanchain/gridsome-plugin-pwa": "^0.3.0",
@@ -16,33 +16,36 @@
     "@trevoreyre/autocomplete-vue": "^2.2.0",
     "flexsearch": "^0.6.32",
     "googleapis": "^57.0.0",
-    "gridsome": "^0.7.22",
+    "gridsome": "^0.7.23",
     "gridsome-plugin-flexsearch": "^1.0.5",
     "gridsome-plugin-pwa": "0.0.18",
     "gridsome-plugin-robots-txt": "^1.0.2",
+    "gridsome-plugin-tailwindcss": "^4.1.1",
     "gridsome-plugin-transfer-file": "^0.1.0",
     "plyr": "^3.6.3",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "1.9.6",
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.2",
-    "vue-gtm": "^3.1.0-vue2",
+    "vue-gtm": "3.1.0-vue2",
     "vue-plyr": "^6.0.4",
     "vue-svg-loader": "^0.15.0",
     "vue2-touch-events": "^2.3.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "fs-extra": "^9.0.1",
     "gridsome-plugin-manifest": "^0.3.5",
     "gridsome-plugin-service-worker": "^0.2.6",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.3.0",
-    "style-resources-loader": "^1.3.3",
+    "postcss": "^8.2.8",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass": "^1.32.8",
+    "sass-loader": "10.1.1",
+    "style-loader": "^2.0.0",
+    "style-resources-loader": "^1.4.1",
     "svg-inline-loader": "^0.8.2"
   }
 }
