topics to topic

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
       "continue": true
     },
     {
+      "src": "/topics",
+      "dest": "/topic"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     },
