--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 src/strings.json
+src/strings/*.json
+
+src/assets/icons/logo.svg
 
 *.log
 .cache
 .DS_Store
 src/.temp
 node_modules
+yarn.lock
 dist
 .env
 .env.*
